<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interaction_controllers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="81947104+rjros@users.noreply.github.com">rjrosales</maintainer>
  <license>Apache-2.0</license>


  <!-- depedencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Python configuration is done in the CMakeList.txt -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- msgs -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>interaction_msgs</depend>


<!-- 
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
    
</package>
